fixed search result heading word wrap

--- a/src/client/core/search/_SearchResults.scss
+++ b/src/client/core/search/_SearchResults.scss
@@ -145,6 +145,10 @@
 					margin-bottom: 0;
 				}
 
+				h1 {
+					word-wrap: break-word;
+				}
+
 				.download-progress {
 					position: absolute;
 					width: 100%;
